# tii

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  bb.edn
.github/workflows/: check.yml  coverage.yml
config/: fuzzingclient.json
constutils/: Cargo.toml
constutils/src/: lib.rs
examples/: Cargo.toml  async-websocket.rs  basic.rs  echo_server.rs  gzip.rs  hello_world.rs  json.rs  monitor.rs  shutdown.rs  shutdown2.rs  shutdown_multiple.rs  shutdown_socket2.rs  shutdown_unix.rs  ssl.rs  static-content.rs  subapp.rs  tls.rs  unix.rs  websocket.rs  websocket_broadcast.rs  wildcard.rs
examples/static/: subapp_index.html
examples/static/pages/: index.html
examples/static/ws/: index.html  index.js
src/: app.rs  default_functions.rs  file_typeifier.rs  functional_traits.rs  handler_traits.rs  handlers.rs  humpty_builder.rs  humpty_error.rs  humpty_router.rs  humpty_router_builder.rs  humpty_server.rs  krauss.rs  lib.rs  percent.rs  route.rs  stream.rs  tii_builder.rs  tii_error.rs  tii_router.rs  tii_router_builder.rs  tii_server.rs  tls_stream.rs  util.rs
src/extras/: builtin_endpoints.rs  connector.rs  mod.rs  network_utils.rs  socket2_tcp_connector.rs  tcp_app.rs  tcp_connector.rs  tls_connector_impl.rs  tls_tcp_connector.rs  tls_unix_connector.rs  unix_connector.rs  websocket_broadcaster.rs
src/extras/triage/: async_app.rs  handler.rs  mod.rs  ping.rs  pool.rs  recovery.rs
src/http/: address.rs  cookie.rs  cors.rs  date.rs  headers.rs  method.rs  mime.rs  mod.rs  proxy.rs  request.rs  request_body.rs  request_context.rs  response.rs  response_body.rs  response_context.rs  response_entity.rs  status.rs  type_handler.rs
src/monitor/: event.rs  mod.rs
src/thread/: pool.rs  recovery.rs
src/websocket/: async_app.rs  error.rs  frame.rs  handler.rs  message.rs  mod.rs  stream.rs  ws_stream.rs
src/websocket/util/: base64.rs  mod.rs  restion.rs  sha1.rs
test_files/ARCHIVES/: arc.7z  arc.tar  arc.xz
test_files/AUDIO/: LICENSE  audio.3gp  audio.aac  audio.m4a  audio.mp2  audio.webm
test_files/DCM/: LICENSE
test_files/IMAGES/: testfile.avif  testfile.heic  testfile.qoi
test_files/VIDEO/: LICENSE  video.3gp  video.avi  video.m2ts  video.mpeg  video.webm
tests/: date.rs  method.rs  mime_test.rs  mock_stream.rs  qvalue.rs  request.rs  response.rs  shutdown_test.rs  socket2test.rs  status.rs  tc1.rs  tc10.rs  tc11.rs  tc12.rs  tc13.rs  tc14.rs  tc15.rs  tc16.rs  tc17.rs  tc18.rs  tc19.rs  tc2.rs  tc20.rs  tc21.rs  tc22.rs  tc23.rs  tc24.rs  tc25.rs  tc26.rs  tc27.rs  tc28.rs  tc29.rs  tc3.rs  tc30.rs  tc31.rs  tc32.rs  tc33.rs  tc34.rs  tc35.rs  tc36.rs  (+43 more)
tii_examples/: Cargo.toml  clippy.toml
tii_examples/examples/: basic.rs  hello_world.rs  json.rs  static-content.rs  tls.rs  websocket_broadcast.rs
tii_examples/examples/static/: subapp_localhost.html
tii_examples/examples/static/pages/: index.html
