[package]
name = "tii"
version = "0.0.4"
edition = "2024"
authors = ["Alexander Schuetz <aschuetz@protonmail.com>", "Kevin Nakamura <grinkers@grinkers.net>"]
license = "MIT"
homepage = "https://github.com/tiipotto/tii"
repository = "https://github.com/tiipotto/tii"
readme = "README.md"
description = "A Low-Latency Web Server."
keywords = ["http", "server", "http-server"]
categories = ["web-programming::http-server", "network-programming"]
rust-version = "1.86"

[dependencies]
backtrace = { version = "0.3.74", optional = true }
tii-procmacro = { version = "0.0.2" }
getrandom = { version = "0.3", optional = true }
log = { version = "^0.4.27", optional = true }
unowned-buf = "0.1.2"
urlencoding = "2.1.3"
regex = "1.11.1"
sha1 = "0.10.6"
base64 = "0.22.1"
defer-heavy = "0.1.0"
#GZIP/ZLIB in pure rust
libflate = "2.1.0"
listener_poll = { version = "0.1.1", optional = true }


## SSL
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"] }
rust-tls-duplex-stream = { version = "0.2.0", optional = true }

[dev-dependencies]
rustls =  { version = "0.23.28", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
trivial_log = "^0.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dev-dependencies]
rustls-graviola = "0.2.1"

[features]
default = []
random_id = ["getrandom"]
tls = ["rust-tls-duplex-stream", "rustls"]
extras = ["listener_poll"]

[lints.rust]
future-incompatible = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
indexing_slicing = "warn"
unwrap_used = "warn"

[[example]]
name = "basic"
required-features = ["extras", "log"]

[[example]]
name = "shutdown"
required-features = ["extras", "log"]

[[example]]
name = "shutdown_multiple"
required-features = ["extras", "log"]

[[example]]
name = "shutdown_unix"
required-features = ["extras", "log"]

[[example]]
name = "tls"
required-features = ["extras", "log", "tls"]

[[example]]
name = "static-content"
required-features = ["extras"]

[[example]]
name = "wildcard"
required-features = ["extras"]

[[example]]
name = "websocket"
required-features = ["extras", "log"]

[[example]]
name = "unix"
required-features = ["extras", "log"]

[[example]]
name = "websocket_broadcast"
required-features = ["extras"]

[[example]]
name = "gzip"
required-features = ["extras", "log"]

[[example]]
name = "json"
required-features = ["extras", "log"]


[[example]]
name = "hello_world"
required-features = ["log"]