[package]
name = "tii"
version = "0.0.6"
edition = "2021"
authors = ["Alexander Schuetz <aschuetz@protonmail.com>", "Kevin Nakamura <grinkers@grinkers.net>"]
license = "MIT"
homepage = "https://github.com/tiipotto/tii"
repository = "https://github.com/tiipotto/tii"
readme = "README.md"
description = "A Low-Latency Web Server."
keywords = ["http", "server", "http-server"]
categories = ["web-programming::http-server", "network-programming"]
rust-version = "1.86"

[dependencies]
backtrace = { version = "0.3.76", optional = true }
tii-procmacro = { version = "0.0.2" }
getrandom = { version = "0.4", optional = true }
log = { version = "^0.4.29", optional = true }
unowned-buf = "0.2.0"
urlencoding = "2.1.3"
regex = "1.12.2"
sha1 = "0.10.6"
base64 = "0.22.1"
defer-heavy = "0.1.0"
#GZIP/ZLIB in pure rust
libflate = "2.2.1"
listener_poll = { version = "0.1.1", optional = true }
uintx = "0.1.0"

## SSL
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"] }
rust-tls-duplex-stream = { version = "0.2.1", optional = true }

[dev-dependencies]
trivial_log = "^0.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = []
random_id = ["getrandom"]
tls = ["rust-tls-duplex-stream", "rustls"]
extras = ["listener_poll"]

[lints.rust]
future-incompatible = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
indexing_slicing = "warn"
unwrap_used = "warn"
