[package]
name = "examples"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
tii = {path = "..", features = ["extras", "log", "tls"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustls =  { version = "0.23.32", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
trivial_log = "*"
log = "*"

[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
rustls-graviola = "=0.2.1" # Newer version requires newer rust compiler which leaks memory
