[package]
name = "tii_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
tii = {path = "..", features = ["extras", "log", "tls"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustls =  { version = "0.23.32", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
trivial_log = "*"
log = "*"

[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
rustls-graviola = "=0.2.1" # Newer version requires newer rust compiler which leaks memory

[[example]]
name = "basic"

[[example]]
name = "shutdown"

[[example]]
name = "shutdown_multiple"

[[example]]
name = "shutdown_unix"

[[example]]
name = "tls"

[[example]]
name = "static-content"

[[example]]
name = "wildcard"

[[example]]
name = "websocket"

[[example]]
name = "unix"

[[example]]
name = "websocket_broadcast"

[[example]]
name = "gzip"

[[example]]
name = "json"


[[example]]
name = "hello_world"